apollo-federation/src/sources/connect/validation/snapshots/validation_tests@duplicate_source_name.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/duplicate_source_name.graphql
---
[
    Message {
        code: DuplicateSourceName,
        message: "Every `@source(name:)` must be unique. Found duplicate name \"v1\".",
        locations: [
            6:3..6:61,
            7:3..7:61,
        ],
    },
]
