apollo-federation/src/sources/connect/validation/snapshots/validation_tests@empty_source_name.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/validation/empty_source_name.graphql
---
[Message { code: EmptySourceName, message: "The value for `@source(name:)` can't be empty.", locations: [LineColumn { line: 6, column: 15 }..LineColumn { line: 6, column: 17 }] }]
