apollo-federation/src/sources/connect/validation/snapshots/validation_tests@errors.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/errors.graphql
---
[
    Message {
        code: InvalidErrorsMessage,
        message: "In `@source(errors: {message:})`: object values aren't valid here",
        locations: [
            13:25..13:47,
            13:25..13:47,
        ],
    },
    Message {
        code: InvalidErrorsMessage,
        message: "In `@connect(errors: {message:})` on `Query.invalid_sourceless_message_not_string`: object values aren't valid here",
        locations: [
            48:27..48:49,
            48:27..48:49,
        ],
    },
]
