apollo-federation/src/sources/connect/validation/snapshots/validation_tests@fields_with_arguments.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/fields_with_arguments.graphql
---
[
    Message {
        code: ConnectorsFieldWithArguments,
        message: "`@connect(selection:)` on `Query.ts` selects field `T.field`, which has arguments. Only fields with a connector can have arguments.",
        locations: [
            11:7..11:12,
            18:3..18:29,
        ],
    },
    Message {
        code: MissingEntityConnector,
        message: "Entity resolution for `@key(fields: \"id\")` on `T` is not implemented by a connector. See https://go.apollo.dev/connectors/directives/#rules-for-entity-true",
        locations: [
            16:8..16:26,
        ],
    },
]
