apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_connect_url.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_connect_url.graphql
---
[
    Message {
        code: RelativeConnectUrlWithoutSource,
        message: "`GET` in `@connect(http:)` on `Query.resources` specifies the relative URL \"127.0.0.1\", but no `source` is defined. Either use an absolute URL including scheme (http://), or add a `@connect__source`.",
        locations: [
            LineColumn {
                line: 5,
                column: 42,
            }..LineColumn {
                line: 5,
                column: 58,
            },
        ],
    },
]
