apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_entity_arg_field_arg_key_mismatch.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_entity_arg_field_arg_key_mismatch.graphql
---
[
    Message {
        code: EntityResolverArgumentMismatch,
        message: "`@connect(entity: true)` on `Query.product` has invalid entity resolver arguments. Argument `id` does not exist as a key field on entity type `Product`.",
        locations: [
            LineColumn {
                line: 13,
                column: 9,
            }..LineColumn {
                line: 13,
                column: 16,
            },
            LineColumn {
                line: 18,
                column: 9,
            }..LineColumn {
                line: 18,
                column: 21,
            },
        ],
    },
]
