apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_entity_arg_field_arg_key_mismatch_composite_key.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_entity_arg_field_arg_key_mismatch_composite_key.graphql
---
[
    Message {
        code: EntityResolverArgumentMismatch,
        message: "`Query.product` with `@connect(entity: true)` has invalid arguments. Field `id` on input type `CountryInput` does not match a field in a `@key` on type `Product`.",
        locations: [
            50:5..50:12,
            19:9..19:21,
        ],
    },
]
